# ctfbridge

./: .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  help_request.yml  platform_support_request.md
.github/workflows/: ci.yml  e2e.yml  release.yml  test.yml  typecheck.yml  update-docs.yml  update-readme.yml
ctfbridge/: __init__.py  base.py  exceptions.py  factory.py
ctfbridge/base/: identifier.py
ctfbridge/base/services/: attachment.py  auth.py  challenge.py  scoreboard.py
ctfbridge/clients/: rctf_client.py
ctfbridge/clients/demo/: client.py
ctfbridge/core/: client.py  http.py
ctfbridge/demo_platform/: README.md  __init__.py  platform.py
ctfbridge/exceptions/: __init__.py  auth.py  challenge.py  http.py
ctfbridge/models/: __init__.py  auth.py  capability.py  challenge.py  filter.py
ctfbridge/platform/: .auto_client.py.swp  auto_client.py
ctfbridge/processors/: enrich.py  registry.py
ctfbridge/services/: attachments.py  challenges.py  platform.py  scoreboard.py
ctfbridge/utils/: normalization.py  platform_cache.py
dev/: index.md
docs/: api.md  getting-started.md  index.md  platforms.md  requirements.txt
docs/api/: index.md
docs/dev/: architecture.md  errors.md  platforms.md
docs/getting-started/: faq.md  platform-notes.md  platforms.md
examples/: 06_capabilities_check.py  demo.py
scripts/: test_client.py  update_docs.py  update_readme.py
tests/parsers/: test_link_classifier.py
(+28 files in other folders)
