[project]
name = "ctfbridge"
version = "0.1.4"
description = "A Python library for interacting with multiple CTF platforms."
authors = [
  { name="bjornmorten", email="bjornmdev@proton.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ctf", "ctfd"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security",
  "Topic :: Utilities",
]

dependencies = [
  "requests>=2.25,<3.0",
  "beautifulsoup4>=4.9,<5.0",
  "pydantic>=2.0,<3.0"
]

[project.urls]
Documentation = "https://ctfbridge.readthedocs.io"
Repository = "https://github.com/bjornmorten/ctfbridge/"
Issues = "https://github.com/bjornmorten/ctfbridge/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ctfbridge" = ["demo_platform/**"]
